# nestor-matrix

./: .dir-locals.el  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: nestor-matrix.service  setup.sh
scripts/: generate-lock.sh  install-python-olm.sh
src/nestor_matrix/: __init__.py  auth.py  bot.py  cli.py  compat.py  config.py
tests/: test_auth.py
