[project]
name = "nestor-matrix"
version = "0.1.0"
description = "Matrix bot integration for Néstor AI assistant."
authors = [
    { name = "José Fernández Ramos", email = "jose@navika.io" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matrix-nio[e2ee]>=0.25.2",
    "nestor",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.uv]
package = true

[tool.uv.sources]
nestor = { git = "https://github.com/elatomo/nestor" }

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]