[project]
name = "nestor-matrix"
version = "0.1.0"
description = "Matrix bot integration for Néstor AI assistant."
authors = [
    { name = "José Fernández Ramos", email = "jose@navika.io" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "nestor",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
nestor-matrix = "nestor_matrix.cli:cli"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.5",
]

[tool.uv]
package = true

[tool.uv.sources]
nestor = { git = "https://github.com/elatomo/nestor" }

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]
